--- a/publish/html5/index.html
+++ b/publish/html5/index.html
@@ -17,11 +17,17 @@
             -khtml-user-select: none;
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
+
+        body {
+            padding:0;
+            margin: 0;
+            background: #000;
+        }
     </style>
 </head>
-<body style="padding:0; margin: 0; background: #000;">
+<body>
 	<canvas id="gameCanvas" width="800" height="450"></canvas>
-	
-	<script src="game.min.js"></script>
+	<script src="frameworks/cocos2d-html5/CCBoot.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
